# swagger.yml
@@ -55,6 +55,37 @@ components:
       type: array
       items: 
         $ref: '#/components/schemas/Preference'
+    
+    Review:
+      type: object
+      required:
+        - id
+        - review
+        - rating
+      properties:
+        id:
+          type: integer
+        user_id:
+          type: string
+        item_id:
+          type: integer
+        item_type:
+          type: string
+        viewed:
+          type: boolean
+        review:
+          type: string
+        rating:
+          type: integer
+        timestamp:
+          type: string
+        user:
+          type: string
+    
+    Reviews:
+      type: array
+      items: 
+        $ref: '#/components/schemas/Review'
 
   parameters:
     username:
@@ -63,6 +94,12 @@ components:
       required: true
       schema:
         type: string
+    id:
+      name: id
+      in: path
+      required: true
+      schema:
+        type: integer
 
 paths:
   /users:
@@ -259,15 +296,115 @@ paths:
           description: Invalid input or user not found.
     
     delete:
-      summary: Delete a preference by username.
+      summary: Delete all preferences by username.
+      tags:
+        - Preferences
+      operationId: utils.preferences.delete_all_preferences
+      parameters:
+        - $ref: '#/components/parameters/username'
+      responses:
+        '204':
+          description: All preferences deleted successfully.
+        '404':
+          description: User not found.
+  
+  /preferences/{id}:
+    delete:
+      summary: Delete a preference by id.
       tags:
         - Preferences
       operationId: utils.preferences.delete_preference
       parameters:
-        - $ref: '#/components/parameters/username'
+        - $ref: '#/components/parameters/id'
       responses:
         '204':
           description: Preference deleted successfully.
         '404':
           description: User not found.
-      
+  
+  /reviews/{username}:
+    get:
+      summary: get a list of user's reviews
+      tags:
+      - Reviews
+      operationId: utils.reviews.get_review
+      parameters:
+      - $ref: '#/components/parameters/username'
+      responses:
+        '200':
+          description: successfully get a list of user's reviews.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Reviews'
+        '404':
+          description: user not found
+    
+    post:
+      summary: Create a new review.
+      tags:
+        - Reviews
+      operationId: utils.reviews.post_review
+      parameters:
+      - $ref: '#/components/parameters/username'
+      requestBody:
+        description: Review object to create.
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Reviews'
+      responses:
+        '201':
+          description: Review created successfully.
+        '408':
+          description: Invalid input or user not found.
+    
+    delete:
+      summary: Delete all reviews by username.
+      tags:
+        - Reviews
+      operationId: utils.reviews.delete_all_reviews
+      parameters:
+        - $ref: '#/components/parameters/username'
+      responses:
+        '204':
+          description: All reviews deleted successfully.
+        '404':
+          description: User not found.
+    
+  /reviews/{id}:
+    delete:
+      summary: Delete a review by id.
+      tags:
+        - Reviews
+      operationId: utils.reviews.delete_review
+      parameters:
+        - $ref: '#/components/parameters/id'
+      responses:
+        '204':
+          description: Review deleted successfully.
+        '404':
+          description: User not found.
+    
+    patch:
+      summary: Partially update a review by id.
+      tags:
+        - Reviews
+      operationId: utils.reviews.partial_update_review
+      parameters:
+        - $ref: '#/components/parameters/id'
+      requestBody:
+        description: Review object with fields to update.
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Reviews'
+      responses:
+        '200':
+          description: Review updated successfully.
+        '400':
+          description: Invalid input.
+        '404':
+          description: User not found.
